Update capstone 2 statistical analysis nb

--- a/statistical_analysis/capstone2_statistical_analysis.ipynb
+++ b/statistical_analysis/capstone2_statistical_analysis.ipynb
@@ -680,11 +680,17 @@
    "metadata": {},
    "source": [
     "I will point out a few statistics from the data.<br>\n",
-    "The average actor age at the time of movie release is 37.9 years.<br>\n",
-    "Although the movies go back as far as 1913, the average release year is 1996.<br>\n",
-    "The average movie budget is \\\\$39,529,390.<br>\n",
     "Male actors comprised just over 60% of all observations.<br>\n",
-    "The actor career movie revenues average to $138,664,100."
+    "The average movie budget is $39,529,390.<br>\n",
+    "The average actor age at the time of movie release is 37.9 years.<br>\n",
+    "Although the movies go back as far as 1913, the average release year is 1996."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, the actor career movie revenues average to $138,664,100."
    ]
   },
   {
